2012-07-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/common.h (MAGICK_ASSUME_ALIGNED): Add some GCC attribute
	wrappers for useful features added by GCC 4.7.

2012-07-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/gif.c (ReadGIFImage): Try to be better about reporting
	failure when ReadBlob() fails to return the requested number of
	bytes.

2012-06-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/benchmarks.rst: Strip the outdated benchmark results from
	the benchmarks page.

	* magick/command.c (ImportImageCommand): Status returned from the
	command was inverted.

2012-06-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Release GraphicsMagick 1.3.16

2012-06-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (MogrifyImage): -units was adjusting existing
	resolution the wrong way around.

2012-06-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* jpeg: Updated to IJG 8d release.

	* libxml: Updated libxml to 2.8.0 release.

	* zlib: Updated zlib to 1.2.7 release.

	* magick/blob.c (MagickFileHandle): Refer to stdio, bzip2, and
	gzip file handles using their own type.  Eliminates warnings
	observed when compiling with zlib 1.2.7.

	* tiff: Updated libtiff to 4.0.2 release.

	* png: Updated libpng to 1.5.11 release.

2012-06-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Fix typo which caused the --without-lzma option to
	be handled incorrectly.  Resolves SourceForge issue 3535309
	"graphicsmagick from 1.3.13 to 1.3.15 has broken lzma support".

2012-06-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tests/rwfile.c (main): Verify that we can 'ping' the file using
	PingImage().  Tests for some formats may take longer to complete.

	* tests/rwblob.c (main): Verify that we can 'ping' the blob using
	PingBlob().  Tests for some formats may take longer to complete.

	* coders/xbm.c (ReadXBMImage): Fix memory leak of temporary X