@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020120721"
-#define public MagickPackageReleaseDate "snapshot-20120721"
+#define public MagickPackageVersionAddendum ".020120724"
+#define public MagickPackageReleaseDate "snapshot-20120724"
