@@ -36,6 +36,17 @@
 <div class="document">
 
 
+<p>2012-07-24  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>magick/memory.h (MagickAllocateAlignedMemory): New macro to
+allocate aligned memory.
+(MagickFreeAlignedMemory): New macro to free aligned memory.</li>
+<li>magick/memory.c (MagickMallocAligned): New internal function to
+allocate aligned memory.
+(MagickFreeAligned): New internal function to free aligned memory.</li>
+</ul>
+</blockquote>
 <p>2012-07-21  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
